refactor: refactor shouldDeclineTrucoIfIHaveAThreeAndManilhaInHandAndLostTheFirstRound test to use mock